[package]
name = "dendynes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.127"         # или любая другая, но одна!
image         = "0.24"
log           = "0.4"
fern          = "0.6.2"
lazy_static   = "1.4"
nom           = "7"
enum-primitive-derive = "0.2"
num-traits    = "0.2"
bitflags      = "2.1"
#piston_window       = "0.127"
piston2d-graphics   = { version = "0.43", default-features = false }
piston = "^0.53"

[profile.dev]
opt-level = 3